<package format="3">
  <name>mav_msgs</name>
  <version>3.3.3</version>
  <description>Package containing messages for communicating with rotary wing MAVs</description>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <author>Simon Lynen</author>
  <author>Markus Achtelik</author>
  <author>Pascal Gohl</author>
  <author>Sammy Omari</author>
  <author>Michael Burri</author>
  <author>Fadri Furrer</author>
  <author>Helen Oleynikova</author>
  <author>Mina Kamel</author>
  <author>Karen Bodie</author>
  <author>Rik Bähnemann</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/mav_comm</url>
  <url type="bugtracker">https://github.com/ethz-asl/mav_comm/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>eigen_vendor</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>eigen_vendor</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
